# QtUnitTestProject

./: AndroidManifest.xml.in  CMakeLists.txt  Jenkinsfile
app/: CMakeLists.txt  main.cpp  testclass1.cpp  testclass1.h  testclass2.cpp  testclass2.h
app/qml/: Main.qml  MyButton.qml  qmldir
gTests/: CMakeLists.txt  testclass1test.cpp  testclass2test.cpp
qtTests/: CMakeLists.txt  tst_main.cpp  tst_testCase1.qml  tst_testCase2.qml  tst_testclass1.cpp  tst_testclass1.h  tst_testclass2.cpp  tst_testclass2.h
